vbfunctions fix and members/posts module

--- a/README
+++ b/README
@@ -19,4 +19,4 @@ Modules included:
 To disable any modules, simply create a folder called "disabled" and move them into there.
 
 TODO:
-- ???
+- Confirmation of posting threads/sending visitor messages/thanking etc
